--- a/Project/JWT/ManagementParking/ManagementParking/appsettings.json
+++ b/Project/JWT/ManagementParking/ManagementParking/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ParkingDb": "Server=DESKTOP-MQOQHO2\\SQLEXPRESS02;Database=ParkingManagementDB;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Key": "YourSuperSecretKeyThatIsAtLeast32CharactersLong1234!", // key bí mật, dùng để sinh JWT
+    "Issuer": "ParkingAPI",
+    "Audience": "ParkingUsers"
   }
 }
