Update create account v1

--- a/Project/StudentMangerment/PresentationLayer/PresentationLayer/PresentationLayer.csproj
+++ b/Project/StudentMangerment/PresentationLayer/PresentationLayer/PresentationLayer.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\..\DataAccessLayer\DataAccessLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Admin\ManagementTeacher\" />
+  </ItemGroup>
+
 </Project>
