--- a/Project/StudentMangerment/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/Project/StudentMangerment/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -20,6 +20,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="NLog" Version="6.0.6" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="5.5.0" />
   </ItemGroup>
 
   <ItemGroup>
