--- a/Project/StudentMangerment/DataAccessLayer/DataAccessLayer.csproj
+++ b/Project/StudentMangerment/DataAccessLayer/DataAccessLayer.csproj
@@ -18,6 +18,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="NLog" Version="6.0.6" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="5.5.0" />
   </ItemGroup>
 
 </Project>
