--- a/Project/StudentMangerment/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/Project/StudentMangerment/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\DataAccessLayer\DataAccessLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Exceptions\" />
+  </ItemGroup>
+
 </Project>
