--- a/ProjectFinal/BE/ParkingManagement/DataAccessLayer/DataAccessLayer.csproj
+++ b/ProjectFinal/BE/ParkingManagement/DataAccessLayer/DataAccessLayer.csproj
@@ -17,6 +17,9 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="NLog" Version="5.5.0" />
+    <PackageReference Include="NLog.Extensions.Logging" Version="5.5.0" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="5.5.0" />
   </ItemGroup>
 
   <ItemGroup>
