--- a/ProjectFinal/BE/ParkingManagement/PresentationLayer/appsettings.json
+++ b/ProjectFinal/BE/ParkingManagement/PresentationLayer/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ParkingDb": "Server=DESKTOP-MQOQHO2\\SQLEXPRESS02;Database=ParkingManagementNew;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Key": "YourSuperSecretKeyThatIsAtLeast32CharactersLong1234!",
+    "Issuer": "ParkingAPI",
+    "Audience": "ParkingUsers"
   }
 }
