--- a/VBNet/MyLibrary.DAL/MyLibrary.DAL.vbproj
+++ b/VBNet/MyLibrary.DAL/MyLibrary.DAL.vbproj
@@ -134,10 +134,12 @@
     <Compile Include="Publisher.vb">
       <DependentUpon>MyAppDb.tt</DependentUpon>
     </Compile>
+    <Compile Include="Repositories\Implementations\BookRepository.vb" />
     <Compile Include="Repositories\Implementations\GenericRepository.vb" />
     <Compile Include="Repositories\Implementations\RoleRepository.vb" />
     <Compile Include="Repositories\Implementations\UserRepository.vb" />
     <Compile Include="Repositories\Implementations\UserRoleRepository.vb" />
+    <Compile Include="Repositories\Interfaces\IBookRepository.vb" />
     <Compile Include="Repositories\Interfaces\IGenericRepository.vb" />
     <Compile Include="Repositories\Interfaces\IRoleRepository.vb" />
     <Compile Include="Repositories\Interfaces\IUserRepository.vb" />
