--- a/VBNet/MyLibrary.Presentation/MyLibrary.Presentation.vbproj
+++ b/VBNet/MyLibrary.Presentation/MyLibrary.Presentation.vbproj
@@ -48,10 +48,17 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=10.0.0.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>packages\AutoMapper.10.0.0\lib\net461\AutoMapper.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\System.ValueTuple.4.5.0\lib\net47\System.ValueTuple.dll</HintPath>
+    </Reference>
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
@@ -79,6 +86,12 @@
     <Compile Include="Admin\FrmAdminMain.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Admin\FrmBookManagement.Designer.vb">
+      <DependentUpon>FrmBookManagement.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\FrmBookManagement.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Auth\FrmForgotPassword.Designer.vb">
       <DependentUpon>FrmForgotPassword.vb</DependentUpon>
     </Compile>
@@ -98,17 +111,11 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Auth\SessionManager.vb" />
-    <Compile Include="Form1.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1.Designer.vb">
-      <DependentUpon>Form1.vb</DependentUpon>
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
       <DependentUpon>Application.myapp</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <Compile Include="My Project\Resources.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -146,6 +153,7 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MyLibrary.BLL\MyLibrary.BLL.vbproj">
