--- a/VBNet/MyLibrary.BLL/MyLibrary.BLL.vbproj
+++ b/VBNet/MyLibrary.BLL/MyLibrary.BLL.vbproj
@@ -165,7 +165,9 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTOs\Authors\AuthorBookDto.vb" />
     <Compile Include="DTOs\Authors\AuthorCreateDto.vb" />
+    <Compile Include="DTOs\Authors\AuthorDetailDto.vb" />
     <Compile Include="DTOs\Authors\AuthorDto.vb" />
     <Compile Include="DTOs\Authors\AuthorUpdateDto.vb" />
     <Compile Include="DTOs\Auth\LoginRequestDto.vb" />
@@ -200,8 +202,10 @@
     <Compile Include="ExternalServices\Interfaces\ICloudinaryService.vb" />
     <Compile Include="ExternalServices\Interfaces\IEmailService.vb" />
     <Compile Include="Mapping\AuthMappingProfile.vb" />
+    <Compile Include="Mapping\AuthorMappingProfile.vb" />
     <Compile Include="Mapping\BookMappingProfile.vb" />
     <Compile Include="Messages\Auth\AuthMessages.vb" />
+    <Compile Include="Messages\Auth\BookMessages.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -217,8 +221,10 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Services\Implementations\AuthorService.vb" />
     <Compile Include="Services\Implementations\AuthService.vb" />
     <Compile Include="Services\Implementations\BookService.vb" />
+    <Compile Include="Services\Interface\IAuthorService.vb" />
     <Compile Include="Services\Interface\IAuthService.vb" />
     <Compile Include="Services\Interface\IBookService.vb" />
   </ItemGroup>
