--- a/VBNet/MyLibrary.BLL/MyLibrary.BLL.vbproj
+++ b/VBNet/MyLibrary.BLL/MyLibrary.BLL.vbproj
@@ -166,10 +166,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DTOs\Authors\AuthorBookDto.vb" />
-    <Compile Include="DTOs\Authors\AuthorCreateDto.vb" />
     <Compile Include="DTOs\Authors\AuthorDetailDto.vb" />
     <Compile Include="DTOs\Authors\AuthorDto.vb" />
-    <Compile Include="DTOs\Authors\AuthorUpdateDto.vb" />
     <Compile Include="DTOs\Auth\LoginRequestDto.vb" />
     <Compile Include="DTOs\Auth\LoginResponseDto.vb" />
     <Compile Include="DTOs\Auth\RegisterRequestDto.vb" />
@@ -183,9 +181,9 @@
     <Compile Include="DTOs\BorrowDetails\BorrowDetailDto.vb" />
     <Compile Include="DTOs\BorrowTickets\BorrowTicketCreateDto.vb" />
     <Compile Include="DTOs\BorrowTickets\BorrowTicketDto.vb" />
-    <Compile Include="DTOs\Categories\CategoryCreateDto.vb" />
+    <Compile Include="DTOs\Categories\CategoryBookDto.vb" />
+    <Compile Include="DTOs\Categories\CategoryDetailDto.vb" />
     <Compile Include="DTOs\Categories\CategoryDto.vb" />
-    <Compile Include="DTOs\Categories\CategoryUpdateDto.vb" />
     <Compile Include="DTOs\Deposit\DepositCreateDto.vb" />
     <Compile Include="DTOs\Deposit\DepositDto.vb" />
     <Compile Include="DTOs\PagedResult.vb" />
@@ -204,6 +202,7 @@
     <Compile Include="Mapping\AuthMappingProfile.vb" />
     <Compile Include="Mapping\AuthorMappingProfile.vb" />
     <Compile Include="Mapping\BookMappingProfile.vb" />
+    <Compile Include="Mapping\CategoryMappingProfile.vb" />
     <Compile Include="Messages\Auth\AuthMessages.vb" />
     <Compile Include="Messages\Auth\BookMessages.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
@@ -224,9 +223,11 @@
     <Compile Include="Services\Implementations\AuthorService.vb" />
     <Compile Include="Services\Implementations\AuthService.vb" />
     <Compile Include="Services\Implementations\BookService.vb" />
+    <Compile Include="Services\Implementations\CategoryService.vb" />
     <Compile Include="Services\Interface\IAuthorService.vb" />
     <Compile Include="Services\Interface\IAuthService.vb" />
     <Compile Include="Services\Interface\IBookService.vb" />
+    <Compile Include="Services\Interface\ICategoryService.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
