--- a/VBNet/MyLibrary.Presentation/MyLibrary.Presentation.vbproj
+++ b/VBNet/MyLibrary.Presentation/MyLibrary.Presentation.vbproj
@@ -158,6 +158,24 @@
     <Compile Include="Admin\FrmUserManagement.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Admin\Publisher\FrmPublisherDetail.Designer.vb">
+      <DependentUpon>FrmPublisherDetail.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\Publisher\FrmPublisherDetail.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Admin\Publisher\FrmPublisherEditor.Designer.vb">
+      <DependentUpon>FrmPublisherEditor.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\Publisher\FrmPublisherEditor.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Admin\Publisher\FrmPublisherList.Designer.vb">
+      <DependentUpon>FrmPublisherList.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\Publisher\FrmPublisherList.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Auth\FrmForgotPassword.Designer.vb">
       <DependentUpon>FrmForgotPassword.vb</DependentUpon>
     </Compile>
@@ -215,6 +233,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Admin\Book\FrmLibraryManager.resx">
       <DependentUpon>FrmLibraryManager.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Admin\Publisher\FrmPublisherDetail.resx">
+      <DependentUpon>FrmPublisherDetail.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Admin\Publisher\FrmPublisherList.resx">
+      <DependentUpon>FrmPublisherList.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Auth\FrmLogin.resx">
       <DependentUpon>FrmLogin.vb</DependentUpon>
