--- a/VBNet/MyLibrary.Presentation/App.config
+++ b/VBNet/MyLibrary.Presentation/App.config
@@ -10,7 +10,7 @@
 	</startup>
 
 	<connectionStrings>
-		<add name="MyLibraryContext" connectionString="Data Source=DESKTOP-MQOQHO2\SQLEXPRESS02; Initial Catalog=LibraryManagementDB; Integrated Security=True;" providerName="System.Data.SqlClient" />
+		<add name="MyLibraryContext" connectionString="Data Source=QUANGHIY-HANDSO\SQLEXPRESS; Initial Catalog=LibraryManagementDB; Integrated Security=True;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 
 	<runtime>
