--- a/VBNet/MyLibrary.Presentation/App.config
+++ b/VBNet/MyLibrary.Presentation/App.config
@@ -10,7 +10,7 @@
 	</startup>
 
 	<connectionStrings>
-		<add name="MyLibraryContext" connectionString="Data Source=QUANGHIY-HANDSO\SQLEXPRESS; Initial Catalog=LibraryManagementDB; Integrated Security=True;" providerName="System.Data.SqlClient" />
+		<add name="MyLibraryContext" connectionString="Data Source=DESKTOP-MQOQHO2\SQLEXPRESS02; Initial Catalog=LibraryManagementDB; Integrated Security=True;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 
 	<runtime>
@@ -44,5 +44,7 @@
 		<add key="Cloudinary:CloudName" value="dqj3v1x35" />
 		<add key="Cloudinary:ApiKey" value="395951882687742" />
 		<add key="Cloudinary:ApiSecret" value="Nqukmo8gaMwcWjqhuIOPCZd9cP8" />
+		<add key="EmailFrom" value="huydo272@gmail.com"/>
+		<add key="EmailAppPassword" value="vxsfydbwjyrytxne"/>
 	</appSettings>
 </configuration>
